# hka-embedded-iot-ss26

./: .clang-format  CMakeLists.txt  Kconfig  README.md  final_project.html  final_project.md  prj.conf  west.yml
boards/: nrf52840dk_nrf52840.overlay
doc/: README.md  cheatsheet.md  development-workflow.md  hardware.md
drivers/: CMakeLists.txt  Kconfig
drivers/sensor/: CMakeLists.txt
drivers/sensor/grove_ranger/: CMakeLists.txt  Kconfig  grove_ranger.c
dts/bindings/sensor/: grove-ranger.yaml
exercises/: README.md  ble-device.md  buttons-and-leds.md  sensors-and-architecture.md  ultrasonic-sensor.md
include/: comm.h  env_reading.h  hmi.h
scripts/: setup_linux.sh  setup_macos.sh
src/: comm.c  env_reading.c  hmi.c  main.c
